--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="page-header">
 <h3>OIer数据库
 </h3>
-目前数据库中共有&nbsp;<script>document.write(tb.length);</script>&nbsp;人次，当前版本为&nbsp;0.11&nbsp;。有数据错误等请在&nbsp;<a href="https://github.com/fjzzq2002/fjzzq2002.github.io"><i class="fa fa-github"></i>github</a>&nbsp;上提出issue。
+目前数据库中共有&nbsp;<script>document.write(tb.length);</script>&nbsp;人次，当前版本为&nbsp;0.11&nbsp;。有数据错误等请在&nbsp;<a href="https://github.com/OIer-Site/OIer-DB/issues"><i class="fa fa-github"></i>github</a>&nbsp;上提出issue。
 </div>
 <!---->
 
